Second commit of the day, I'm actually impressed. Checked structure, now it's way simpler and makes more sense. When they're right, they're right.

--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -17,6 +17,7 @@
 \item[KGE]{Knowledge Graph Embedding(s)}
 \item[NER]{Named Entity Recognition}
 \item[NLP]{Natural Language Processing}
+\item[TF-IDF]{Term Frequency-Inverse Document Frequency}
 
 \end{description}
 % ----------------------- contents from here ------------------------
