--- a/2_stateoftheart/stateofart.tex
+++ b/2_stateoftheart/stateofart.tex
@@ -11,9 +11,9 @@
     \label{fig:lieberman_tax}
 \end{figure*}
 
-Throughout the years, several categorizations have been proposed for the existing Artificial Intelligence (AI) models, each attending to a specific criterium. \cite{lieberman_symbolic_nodate} categorizes AI models considering their input in two categories: symbolic (also referred to as "classic AI") and subsymbolic. These two types are disjoint and complimentary to each other. \cite{lieberman_symbolic_nodate} depict the AI spectrum as a \textit{yin-yang} (Figure \ref{fig:lieberman_tax}), where the flaws of one kind are compensated by the benefits of the other. While this categorization presents a simple and general overview of the existing AI models, it lacks a middle ground where hybrid approaches can be categorized. 
+Throughout the years, several categorizations have been proposed for the existing Artificial Intelligence (AI) models, each attending to a specific criterium. \cite{lieberman_symbolic_nodate} categorizes AI models considering their input in two categories: symbolic (also referred to as ``classic AI") and subsymbolic. These two types are disjoint and complimentary to each other. \cite{lieberman_symbolic_nodate} depicts the AI spectrum as a \textit{yin-yang} (Figure \ref{fig:lieberman_tax}), where the flaws of one kind are compensated by the benefits of the other. While this categorization presents a simple and general overview of the existing AI models, it lacks a middle ground where hybrid approaches can be categorized. 
 
-Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_black-box_2019} envisions the AI spectrum from the perspective of the output. This taxonomy categorizes AI approaches as \textit{white-box} or \textit{black-box} considering whether the process that lead to a given output can be explained or not. The notation \textit{black-box} is used to describe those models whose inference process cannot be explain, which mainly applies to machine learning models.  \textit{Black-box} models can be subsequently grouped in: hyperplane-based, neural networks, probability-based and instance-based. On the opposite side of this spectrum lie \textit{white-box} models, which relate to those approaches whose inference process can be understood and explained. Decision trees, rule-based systems, or fuzzy logic are encompassed in this category.
+Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_black-box_2019} envisions the AI spectrum from the perspective of the output. This taxonomy categorizes AI approaches as \textit{white-box} or \textit{black-box} considering whether the process that lead to a given output can be explained or not. The notation \textit{black-box} is used to describe those models whose inference process cannot be explain, which mainly applies to machine learning models.  \textit{Black-box} models can be subsequently grouped in: hyperplane-based, neural networks, probability-based and instance-based. \textit{White-box} models lie on the opposite side of the spectrum, and relate to those approaches whose inference process can be understood and explained. Decision trees, rule-based systems, or fuzzy logic are encompassed in this category.
 
 
 \begin{figure}
@@ -24,7 +24,7 @@ Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_
 \end{figure}
 
 
-More recently, \cite{corea_ai_2019} proposed a two dimensional categorization of AI technologies. Instead of considering the input or output of the model, this taxonomy focuses on the application domains of each paradigm and its reasoning paradigm. Figure \ref{fig:ai_map} portrays this categorization, where the Y-axis comprises the existing problem domains, while the$\times$-axis encodes the three considered paradigms: symbolic, statistical and subsymbolic. While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only considered the symbolic (blue) and subsymbolic (red) categories, \cite{corea_ai_2019} also considers the statistical (purple) models as an in-between group between the two complimentary groups. Moreover, finer-grained subcategories can be distinguished inside each of the three main paradigms:
+More recently, \cite{corea_ai_2019} proposed a two dimensional categorization of AI technologies. Instead of considering the input or output of the model, this taxonomy focuses on the application domains of each paradigm and its reasoning paradigm. Figure \ref{fig:ai_map} portrays this categorization, where the Y-axis comprises the existing problem domains, while the X-axis encodes the three considered paradigms: symbolic, statistical and subsymbolic. While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only considered the symbolic (blue) and subsymbolic (red) categories, \cite{corea_ai_2019} also considers the statistical (purple) models as an in-between group between the two complimentary groups. Moreover, finer-grained subcategories can be distinguished inside each of the three main paradigms:
 \begin{itemize}
     \item \textbf{Symbolic models:} The term \textit{symbolic} describes AI paradigms that not only employ symbolic representations as input, but have an inference process that can be understood and explained by humans. Two finer grained types are identified inside this category: logic-based and knowledge-based.
     \item \textbf{Statistical models:} While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only comprised symbolic and subsymbolic models, which are treated as analogous and complimentary kinds, this taxonomy distinguishes statistical models from purely subsymbolic models. These models employ mathematical tools for reasoning and can be subsequently divided into probabilistic and machine learning models.
@@ -41,7 +41,7 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
 \begin{itemize}
     \item \textbf{Knowledge-Based Systems:} These systems fit almost perfectly the definition previously provided for the symbolic paradigms. Therefore, this category groups all the models that require from background expert knowledge to reason:
     \begin{itemize}
-        \item \textit{Inductive Logic Programming (ILP):} This term was first introduced by \cite{Muggleton1991}, describing this field as "\textit{the area of AI which deals with the induction of hypothesised predicate definitions from examples and background knowledge}". ILP is one of the prime examples of symbolic learning, using fully expressive representations to encode logical clauses and knowledge, making the input, output and the induction process fully explainable.
+        \item \textit{Inductive Logic Programming (ILP):} This term was first introduced by \cite{Muggleton1991}, describing this field as ``\textit{the area of AI which deals with the induction of hypothesised predicate definitions from examples and background knowledge}". ILP is one of the prime examples of symbolic learning, using fully expressive representations to encode logical clauses and knowledge, making the input, output and the induction process fully explainable.
         \item \textit{Semantic Reasoners:} Instead of expressing background knowledge by means of logical clauses or predicates as in ILP, semantic reasoners use ontologies to encode background knowledge. Ontologies \citep{noy2001ontology} provide explicit specifications of conceptualizations which are shared and understood between humans and machines. Moreover, ontologies present a formal definition of classes (or types) and the properties and relations between those classes and their instances in a given domain. From the information encoded in an ontology, a semantic reasoner (also referred to as the reasoning engine) can infer new axioms from the existing axioms.
         \item \textit{Expert Systems:} Formally, an expert system can be described as an AI system capable of emulating the decision-making process of a human expert of a given domain. These systems are composed by two differentiated parts: an inference engine and a knowledge base. The knowledge base encodes the facts, rules and background information needed. The inference engine applies the rules existing in the knowledge base to the known facts to infer new facts. \textit{Rule Systems} are the cornerstone of expert systems, using if-then clauses to infer new information from the already existing knowledge. As both facts and rules are encoded in a declarative way, the inference process can be fully understood and explained by humans. \elvitodo{A lo mejor esto hay que aumentarlo un poco}
         
@@ -55,12 +55,12 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
     \end{itemize}
     \item \textbf{Deep Learning} was first introduced in 2012 \citep{bengio_2012_dl_review}. This term was coined to describe the upcoming trend of computational intelligence models, especially neural networks, that are capable of reasoning at a very high level of abstraction. There is not a formal unified definition for the models encompassed in this trend, but they share common features such as requiring elevated computational resources, performing more than two in-between transformations between the input and the output (i.e: having more than two intermediate layers in neural networks) or learning multiple representations with different abstraction levels.
     \begin{itemize}
-        \item \textit{Neural Networks}, are connected systems inspired by the neurological behaviour of brains \citep{Rosenblatt58theperceptron:}. These models are composed by the interconnection of single processing units called 'neurons', capable of performing simple mathematical operations. A neural network receives an input, which is subsequently processed by the neurons to generate an output value. In order for the output value to be coherent with the input, the neural network requires a training (or learning) process, where the weights of the connections between the neurons are learned using the error gradient backpropagation from a loss function \citep{rumelhart_1987_backpropagation}.  
+        \item \textit{Neural Networks}, are connected systems inspired by the neurological behaviour of brains \citep{Rosenblatt58theperceptron:}. These models are composed by the interconnection of single processing units called \textit{neurons}, capable of performing simple mathematical operations. A neural network receives an input, which is subsequently processed by the neurons to generate an output value. In order for the output value to be coherent with the input, the neural network requires a training (or learning) process, where the weights of the connections between the neurons are learned using the error gradient backpropagation from a loss function \citep{rumelhart_1987_backpropagation}.  
         
         % Three main types of neural network learning can be distinguished: supervised, unsupervised and reinforcement learning. In \textit{supervised learning}, a set of known inputs with their corresponding outputs 
         \item \textit{Computer Vision} is one of the primary fields of application of deep learning. This area encompasses methods capable of capturing, processing, analyze and reason over graphic data. Convolutional Neural Networks (or CNNs) have been the dominant paradigm of this area since 2012 \citep{alexnet}, reaching state-of-the-art results in most computer vision tasks.
         
-        \item \textit{Natural Language Processing} (or NLP) \citep{chowdhury_2003_nlp} encompasses those models and tasks focusing on understanding, processing, and generating spoken and written words similarly to humans. While knowledge-based systems were previously predominant in the area, the existing models have been slowly replaced by a series of neural network architectures capable of performing the same tasks with remarkably better results. Some neural network architectures specific of this area include \textit{Bidirectional Long-Short Term Memories} (Bi-LSTM)\citep{devlin-etal-2019-bert,peters-etal-2018-deep} and \textit{Recurrent Neural Networks} (RNNs) \citep{wang-etal-2016-combination}. 
+        \item \textit{Natural Language Processing} (or NLP) \citep{chowdhury_2003_nlp} encompasses those models and tasks focusing on understanding, processing, and generating spoken and written words similarly to humans. While knowledge-based systems were previously predominant in the area, the existing models have been slowly replaced by a series of neural network architectures capable of performing the same tasks with remarkably better results. Some neural network architectures specific of this area include \textit{Bidirectional Long-Short Term Memories} (Bi-LSTM) \citep{devlin-etal-2019-bert,peters-etal-2018-deep} and \textit{Recurrent Neural Networks} (RNNs) \citep{wang-etal-2016-combination}. 
         
         \item \textit{Knowledge Graph Embeddings} \citep{dai_survey_2020} aim to arithmetically represent the information encoded in the facts contained in a knowledge graph, associating every entity and relation with a unique representation. The resulting depiction aims to embed the knowledge stored in the facts so that several constraints are met. One of the most important restrictions is that those entities representing similar concepts should have similar embeddings, meaning that the distance between their representations should be fairly small. According to the scoring function, two different types of approaches can be defined: translation-based and semantic matching models. Translation-based models aim to minimize distance-based scoring functions, while semantic matching models measure the plausibility of a given fact by matching the latent semantics of entities and relations.
     \end{itemize}
@@ -71,11 +71,11 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
 
 % \section{Design Methods for Hybrid Learning Systems}
 \section{Neurosymbolic Systems} \label{sec:sota_neurosymbolic_systems}
-\textit{Neurosymbolic} (or hybrid learning) AI describes a set of proposed methods designed to integrate analogous AI models, generating new approaches that combine the benefits of both models under a unified framework. As \cite{valiant_three_2003} claimed: \textit{"The aim is to identify a way of looking at and manipulating commonsense knowledge that is consistent with and can support what we consider to be the two most fundamental aspects of intelligent cognitive behaviour: the ability to learn from experience and the ability to reason from what has been learned"}. Several efforts have been conducted on this direction, proposing strategies, categorizations, and studying the limitations of this integration. 
+\textit{Neurosymbolic} (or hybrid learning) AI describes a set of proposed methods designed to integrate analogous AI models, generating new approaches that combine the benefits of both models under a unified framework. As \cite{valiant_three_2003} claimed: ``\textit{The aim is to identify a way of looking at and manipulating commonsense knowledge that is consistent with and can support what we consider to be the two most fundamental aspects of intelligent cognitive behaviour: the ability to learn from experience and the ability to reason from what has been learned"}. Several efforts have been conducted on this direction, proposing strategies, categorizations, and studying the limitations of this integration. 
 
 \subsection{Motivation}
 %%Papers referentes a por qué, limitaciones, etc. Aquí va el paper de sensors
-\cite{mcgarry_hybrid_1999} theorized about the potential benefits of combining symbolic and subsymbolic systems, represented by rule-based systems and neural networks, respectively. According to \cite{mcgarry_hybrid_1999}: "\textit{The ability of neural networks to perform tasks that would otherwise prove difficult or intractable to symbolic computing systems is now recognized}". This statement illustrates the main claim behind neurosymbolic systems: combining the benefits of symbolic and subsymbolic models such that the resulting hybrid system enables the solution of tasks that can not be solved by just one of the kinds. 
+\cite{mcgarry_hybrid_1999} theorized about the potential benefits of combining symbolic and subsymbolic systems, represented by rule-based systems and neural networks, respectively. According to \cite{mcgarry_hybrid_1999}: ``\textit{The ability of neural networks to perform tasks that would otherwise prove difficult or intractable to symbolic computing systems is now recognized}". This statement illustrates the main claim behind neurosymbolic systems: combining the benefits of symbolic and subsymbolic models such that the resulting hybrid system enables the solution of tasks that can not be solved by just one of the kinds. 
 
 % This statement has been subsequently validated by various works throughout the years, such as \cite{mira_neurosymbolic_2004}, \cite{bader_dimensions_2005} or \cite{garcez_neural-symbolic_2019}.
 
@@ -123,7 +123,7 @@ The metrics reported in the table are: M1 (scalability), M2 (interpretability), 
 \end{tabular}
 }
 \end{table}
-A systematic review was conducted in the context of ambient intelligence to further explore the existence, limitations, and causes of the application of neurosymbolic models. This work is extensively presented in \cite{amador_systematic_review_2019}, and it is part of the contributions of this thesis. The conducted review studies the interactions between knowledge bases (KBs) and machine learning models, as well as their specific applications. Different application subdomains were identified to clearly identify the scope of application of each proposal. This finer-grained analysis enables a better comprehension of the reasons why a certain model is chosen for a certain task. The identified subdomains, following the categorization proposed by \cite{ahmedetal} are: health, housing, education, mobility, risk and resource management, government, and multidomain. Another main goal of this study is to assess whether and how background knowledge (in the form of a knowledge base) is integrated into different predictive and decision-making models.
+A systematic review was conducted in the context of ambient intelligence to further explore the existence, limitations, and causes of the application of neurosymbolic models. This work is extensively presented in \cite{amador_systematic_review_2019}\footnote{Elvira Amador-Domínguez, Emilio Serrano, Daniel Manrique, & Juan F. De Paz (2019). Prediction and Decision-Making in Intelligent Environments Supported by Knowledge Graphs, A Systematic Review. Sensors, 19(8), 1774. doi:10.3390/s19081774}, being one of the contributions of this thesis. The conducted review studies the interactions between knowledge bases (KBs) and machine learning models, as well as their specific applications. Different application subdomains were identified to clearly identify the scope of application of each proposal. This finer-grained analysis enables a better comprehension of the reasons why a certain model is chosen for a certain task. The identified subdomains, following the categorization proposed by \cite{ahmedetal} are: health, housing, education, mobility, risk and resource management, government, and multidomain. Another main goal of this study is to assess whether and how background knowledge (in the form of a knowledge base) is integrated into different predictive and decision-making models.
 
 Background knowledge was mostly extracted from three sources: data provided by users, previously existing KBs, and sensor data, being the latest the most prominent one. Regarding the role of the KB, it varies greatly across the different subdomains. In the health, mobility, risk and resource management and housing domains, the KB is built with the purpose of subsequently feeding a predictive model, doting it with background knowledge and enhancing its reasoning capabilities. This statement does not hold in the government and education domains, where the KB plays the primary role instead of serving as a secondary element.
 
@@ -241,7 +241,7 @@ Opposite to integration, extraction describes hybrid approaches where one of the
     \label{fig:van_bekkum_explain_complete}
 \end{figure}
 
-Explainable Artificial Intelligence (XAI) is the main area of application of these approaches. As stated in \cite{angelov_explainable_2021}: \textit{"As Artificial Intelligence and Machine Learning (and, especially, Deep Learning) become more wide spread and intertwined with human-centric applications, and algorithmic decisions become more consequential to individuals and society, attention has shifted back from accuracy to explainability"}. This is further evidenced by the results obtained in \cite{amador_systematic_review_2019}, where explainable methods were widely favoured as opposite to more accurate but opaque ones. \cite{burkart_survey_2021} provides a set of reasons why AI models should be explainable, namely: \textit{trust, causality, transferability, informativeness, fair and ethical decision making, accountability, adjustment-making} and \textit{proxy functionality}. These features are not inherent to deep learning models, and should therefore be enforced.
+Explainable Artificial Intelligence (XAI) is the main area of application of these approaches. As stated in \cite{angelov_explainable_2021}: ``\textit{As Artificial Intelligence and Machine Learning (and, especially, Deep Learning) become more wide spread and intertwined with human-centric applications, and algorithmic decisions become more consequential to individuals and society, attention has shifted back from accuracy to explainability"}. This is further evidenced by the results obtained in \cite{amador_systematic_review_2019}, where explainable methods were widely favoured as opposite to more accurate but opaque ones. \cite{burkart_survey_2021} provides a set of reasons why AI models should be explainable, namely: \textit{trust, causality, transferability, informativeness, fair and ethical decision making, accountability, adjustment-making} and \textit{proxy functionality}. These features are not inherent to deep learning models, and should therefore be enforced.
 
 While \textit{explainability} is the general term used to describe these approaches, a variety of different terms are employed in the literature. Amongst the existing terms, the following are the most prominent ones, each presenting a different nuance \citep{barredo_arrieta_explainable_2020,adadi_explainability_2018,gilpin_explainability_2018}:
 \begin{itemize}
