--- a/6_kbsextractiondl/kbsextractiondl.tex
+++ b/6_kbsextractiondl/kbsextractiondl.tex
@@ -1,10 +1,10 @@
 \chapter{Knowledge-Based System Extraction from Deep Learning Models}
 \label{chap:kbsextractiondl}
 %ENLAZAR ESTO CON LOS PRINCIPIOS DE EXPLICABILIDAD DE PHILLIPS ET AL..
-\blfootnote{Elvira Amador-Domínguez, Emilio Serrano, & Daniel Manrique (2021). A hierarchical multi-agent architecture based on virtual identities to explain black-box personalization policies. Expert Syst. Appl., 186, 115731. doi:10.1016/j.eswa.2021.115731
+\blfootnote{Elvira Amador-Domínguez, Emilio Serrano, & Daniel Manrique (2021). A hierarchical multi-agent architecture based on virtual identities to explain black-box personalization policies. Expert Syst. Appl., 186, 115731. doi:10.1016/j.eswa.2021.115731}
 
-}
-\section{Knowledge Extraction from Deep Learning Models}
+
+\section{Knowledge Extraction from Deep Learning Models}\label{6_sec:kbs_extra_dl_method}
 In this context, the DL model acts as a passive element, from which KBS is extracted by means of a middleware model. Method design parameters for KBS extraction from DL models are depicted in Figure \ref{fig:kbs_extra_dl_overview}.
 \begin{figure}[t]
     \centering
@@ -53,5 +53,18 @@ In this context, the DL model acts as a passive element, from which KBS is extra
     \item \textbf{Human-focused.}\label{kbsextradl_B_human} DL models work virtually autonomously, minimizing the implication of users within the process. Making the models understandable by humans can increase the active implications of users within the learning process not only increasing their trust, but also enhancing the performance of the model from the inclusion of human knowledge (\ref{kbsextradl_L_human}). 
 \end{enumerate}
 %%HAY DOS CASOS DE USO. DAME TU FUERZA PEGASO QUE SE VIENE LA MADRE DE TODOS LOS INVENTS. 
+%\section{User Profiling from Deep Learning Hyperpersonalization Models}
 
+%\section{A Hierarchical Multi-Agent Architecture Based on Virtual Identities}
+
+%\section{Design Compliance I}
+
+
+
+%%-----
+%\section{Explainability on Knowledge Graph Completion}
+
+%\section{GEnI: A Model-Agnostic Framework for Generating Explanations and Insights on Link Predictions}
+
+%\section{Design Compliance II}
 \section{Summary}
